MCR-3084 Use field mapper also at submit